# mara-pipelines

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  pruebatexto.txt  pyproject.toml  setup.cfg  setup.py  test.py
.github/workflows/: build.yaml
data_integration/: __init__.py  config.py  event_base.py  events.py  execution.py  pipelines.py  shell.py
data_integration/commands/: bash.py  files.py  python.py  sql.py
data_integration/incremental_processing/: file_dependencies.py  incremental_copy_status.py  processed_files.py  reset.py
data_integration/logging/: __init__.py  chat_room.py  events.py  logger.py  node_cost.py  notifier.py  pipeline_events.py  run_log.py  slack.py  system_statistics.py  teams.py
data_integration/notification/: chat_room.py  notifier.py  slack.py  teams.py
data_integration/parallel_tasks/: files.py  python.py  sql.py
data_integration/ui/: __init__.py  cli.py  dependency_graph.py  last_runs.py  node_page.py  run_page.py  run_time_chart.py  run_time_chart.sql  views.py
docs/: api.rst  changes.md  cli.rst  commands.rst  conf.py  config.rst  example.md  getting-started.md  index.rst  installation.rst  license.rst  parallel_tasks.rst  requirements.txt
mara_pipelines/: __init__.py  _version.py  cli.py  config.py  events.py  execution.py  pipelines.py  shell.py
mara_pipelines/commands/: bash.py  files.py  http.py  python.py  sql.py
mara_pipelines/contexts/: __init__.py  bash.py  ssh.py  (+1 more)
tests/: README.md  command_helper.py  db_test_helper.py  docker-compose.yml  local_config.py  test_execute_pipeline.py  test_parallel_read.py  test_parallel_read_feedworker.py  test_pipeline_tasks.py
(+55 files in other folders)
