[metadata]
name = mara-pipelines
version = attr: mara_pipelines.__version__
url = https://github.com/mara/mara-pipelines
description = Opinionated lightweight ELT pipeline framework
long_description = file: README.md
long_description_content_type = text/markdown
author = Mara contributors
license = MIT

[options]
packages = mara_pipelines
python_requires = >= 3.6
install_requires =
    mara-db>=4.9.1
    mara-page>=1.7.0
    graphviz>=0.8
    python-dateutil>=2.6.1
    pythondialog>=3.4.0
    more-itertools>=3.1.0
    psutil>=5.4.0
    requests>=2.19.1
    SQLAlchemy>=1.4

[options.package_data]
mara_pipelines = **/*.py, **/*.sql, ui/static/*

[options.extras_require]
test =
    pytest
    pytest-docker
    pytest-dependency
    mara_app>=1.5.2
    mara-db[postgres,mssql]

[options.entry_points]
mara.commands =
    pipelines = mara_pipelines.cli:mara_pipelines
